--- a/app/views/items/update.js.erb
+++ b/app/views/items/update.js.erb
@@ -1,1 +1,1 @@
-$("#edit-item").html("<%= j render 'items/form', invoice: @invoice, item: @item %>");
+$("#edit-item").html("<%= j render 'items/form', invoice: @invoice, item: @item, input_group: @input_group %>");
