--- a/app/views/item_fields/_number_field.html.erb
+++ b/app/views/item_fields/_number_field.html.erb
@@ -1,4 +1,5 @@
 <div class="col-2">
+  <label><%= input_label(f_hsh) %></label>
   <div class="input-group input-group-sm">
     <%= f.number_field f_hsh[:f_name], value: f_hsh[:selected],  placeholder: f_hsh[:f_name], step: 0.5, class: "form-control field-param" %>
   </div>
