--- a/app/views/item_fields/update.js.erb
+++ b/app/views/item_fields/update.js.erb
@@ -1,1 +1,1 @@
-$("#edit-item-fields").html("<%= j render 'item_fields/edit', item: @item %>");
+$("#edit-item-fields").html("<%= j render 'item_fields/edit', item: @item, input_group: @input_group %>");
