--- a/app/views/items/_table.html.erb
+++ b/app/views/items/_table.html.erb
@@ -1,9 +1,9 @@
 <table class="table table-sm table-striped table-hover">
   <thead>
     <tr>
-      <% invoice_keys.each do |opts| %>
-        <th scope="col"><span class="fs-s"><%= opts[-1] %></span></th>
-      <% end %>
+      <%# invoice_keys.each do |opts| %>
+        <th scope="col"><span class="fs-s"><%#= opts[-1] %></span></th>
+      <%# end %>
     </tr>
   </thead>
 
