--- a/app/views/items/_table_row.html.erb
+++ b/app/views/items/_table_row.html.erb
@@ -5,9 +5,7 @@
     </a>
   </td>
 
-  <%# table_row(item.csv_tags).each do |row| %>
-    <td>
-      <span class="fs-s"><%= item.input_group[:attrs]['abbrv'] %></span>
-    </td>
-  <%# end %>
+  <td>
+    <span class="fs-s"><%= item.hattr('csv_tags', 'invoice_tagline') %></span>
+  </td>
 </tr>
