--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -47,7 +47,7 @@
   <div class="col-8">
     <div id="show-card">
       <%= render "items/form", invoice: @item.invoice, item: @item %>
-      <%= render "item_fields/edit", item: @item %>
+      <%= render "item_fields/edit", item: @item, rows: @rows %>
     </div>
   </div>
 </div>
