--- a/app/views/search_items/_form.html.erb
+++ b/app/views/search_items/_form.html.erb
@@ -16,12 +16,12 @@
         </div>
       </div>
 
-      <% attrs.each do |k, opt_hsh| %>
-        <%= render 'search_items/input_field', scope: 'attrs', k: k, opts: opt_hsh['opts'], selected: opt_hsh['selected'], col: 'col-2' %>
-      <% end %>
+      <%# attrs.each do |k, opt_hsh| %>
+        <%#= render 'search_items/input_field', scope: 'attrs', k: k, opts: opt_hsh['opts'], selected: opt_hsh['selected'], col: 'col-2' %>
+      <%# end %>
 
-      <% hattrs.each do |k, opt_hsh| %>
-        <%= render 'search_items/input_field', scope: 'search', k: k, opts: opt_hsh['opts'], selected: opt_hsh['selected'], col: attr_tags[k]['col'] %>
+      <% hattrs.each do |hattr_inputs| %>
+        <%= render 'search_items/input_field', scope: 'hattrs', k: hattr_inputs['input_name'], opts: hattr_inputs['opts'], selected: hattr_inputs['selected'], col: 'col-2' %>
       <% end %>
     </div>
   </div>
