--- a/app/views/search_items/_table_row.html.erb
+++ b/app/views/search_items/_table_row.html.erb
@@ -1,5 +1,5 @@
 <tr>
-  <% product_item_media(item.csv_tags).each do |row| %>
+  <% product_item_media(item.tags).each do |row| %>
     <td>
       <span class="fs-s"><%= row %></span>
     </td>
