--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -5,7 +5,7 @@
 </a>
 
 <%= render 'skus/destroy', invoice: @invoice %>
-<%#= render 'skus/form', invoice: @invoice %>
+<%= render 'skus/form', invoice: @invoice %>
 <%= render 'export_skus/form', invoice: @invoice %>
 <%= render 'invoices/edit', invoice: @invoice %>
 <%#= render 'invoices/nav_bar', invoice: @invoice %>
