--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -4,10 +4,11 @@
   search
 </a>
 
-<%= render 'skus/destroy', invoice: @invoice %>
+<%#= render 'skus/destroy', invoice: @invoice %>
+<%= render 'skus/search', invoice: @invoice, results: @results, inputs: @inputs %>
 <%= render 'skus/form', invoice: @invoice %>
-<%= render 'export_skus/form', invoice: @invoice %>
-<%= render 'invoices/edit', invoice: @invoice %>
+<%#= render 'export_skus/form', invoice: @invoice %>
+<%#= render 'invoices/edit', invoice: @invoice %>
 <%#= render 'invoices/nav_bar', invoice: @invoice %>
 
 <div id="items-table">
