--- a/app/views/skus/create.js.erb
+++ b/app/views/skus/create.js.erb
@@ -1,2 +1,3 @@
-$("#new-skus").replaceWith("<%= j render 'search_items/sku_form', invoice: @invoice %>");
+$("#search-skus").html("<%= j render 'skus/search', invoice: @invoice, results: @results, inputs: @inputs %>");
+$("#new-skus").html("<%= j render 'skus/form', invoice: @invoice %>");
 $("#items-table").replaceWith("<%= j render 'items/table', invoice: @invoice %>");
