--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -6,29 +6,35 @@
 
     <div class="card border border-secondary p-2 mb-2">
       <div class="row">
+
         <div class="col-2">
           <label>sku</label>
-          <%= f.number_field :sku, placeholder: "sku", class: "form-control form-control-sm mr-sm-2 input-field" %>
+          <%= f.number_field :sku, placeholder: "sku", class: "form-control form-control-sm mr-sm-2 field-param" %>
+        </div>
+
+        <div class="col-2">
+          <label>artist</label>
+          <%= f.collection_select :artist_id, Artist.all, :id, :artist_name, {include_blank: true, selected: item.artist.try(:id)}, class: "form-control form-control-sm mr-sm-2 field-param" %>
         </div>
 
         <div class="col-4">
           <label>title</label>
-          <%= f.text_field :title, placeholder: "title", class: "form-control form-control-sm mr-sm-2 input-field" %>
+          <%= f.text_field :title, placeholder: "title", class: "form-control form-control-sm mr-sm-2 field-param" %>
         </div>
 
         <div class="col-2">
           <label>retail</label>
-          <%= f.number_field :retail, placeholder: "retail", class: "form-control form-control-sm mr-sm-2 input-field" %>
+          <%= f.number_field :retail, placeholder: "retail", class: "form-control form-control-sm mr-sm-2 field-param" %>
         </div>
 
         <div class="col-2">
           <label>qty</label>
-          <%= f.number_field :qty, placeholder: "qty", class: "form-control form-control-sm mr-sm-2 input-field" %>
+          <%= f.number_field :qty, placeholder: "qty", class: "form-control form-control-sm mr-sm-2 field-param" %>
         </div>
       </div>
     </div>
 
-    <button class="btn btn-sm btn-outline-primary form-control-sm" type="submit">edit</button>
+    <!-- <button class="btn btn-sm btn-outline-primary form-control-sm" type="submit">edit</button> -->
     <%= link_to "delete", [invoice, item], method: :delete, class: 'btn btn-sm btn-outline-danger form-control-sm', data: { confirm: 'Are you sure?' } %>
 
   </div>
