--- a/app/views/item_products/forms/_search.html.erb
+++ b/app/views/item_products/forms/_search.html.erb
@@ -1,12 +1,22 @@
 <%= form_with model: item, url: search_item_products_path, method: :get, id: 'search-item-product' do |f| %>
-  <div class="form">
-    <div class="collapse">
-      <%= number_field_tag :id, item.id %>
-    </div>
-
+  <div class="form-inline">
+    <%= number_field_tag :id, item.id, class: "collapse" %>
+  
     <% inputs.each do |input| %>
-      <%= render "item_products/forms/search_field", name: input['input_name'], opts: input['opts'], selected: input['selected'] %>
+      <div class="col-2 border-light-gray p-1">
+        <div class="input-group input-group-sm">
+          <label class="fs-s font-weight-light text-secondary pr-1"> <%= search_label(input['input_name']) %></label>
+          <%= select_tag "items[search][#{input['input_name']}]", options_for_select(search_input_options(input['input_name'], input['opts']), input['selected']), {class: "form-control border-light-gray rounded-right-border rounded-left-border search-select"} %>
+        </div>
+      </div>
     <% end %>
+
+    <div class="col-6 border-light-gray p-1">
+      <div class="input-group input-group-sm">
+        <label class="fs-s font-weight-light text-secondary pr-1"> prd:</label>
+        <%= f.collection_select :product, products, :id, :product_name, {include_blank: true, selected: item.product.try(:id)}, class: "form-control border-light-gray rounded-right-border rounded-left-border item-product-select" %>
+      </div>
+    </div>
 
   </div>
 <% end %>
