--- a/app/views/item_products/search.js.erb
+++ b/app/views/item_products/search.js.erb
@@ -1,2 +1,1 @@
-$("#item-products-index").replaceWith("<%= j render 'item_products/index', item: @item, products: @products %>");
-$("#search-item-product").html("<%= j render 'item_products/forms/search', item: @item, inputs: @inputs %>");
+$("#search-item-product").html("<%= j render 'item_products/forms/search', item: @item, inputs: @inputs, products: @products %>");
