--- a/app/views/skus/_search.erb
+++ b/app/views/skus/_search.erb
@@ -1,5 +1,6 @@
 <%= form_with model: Item.new, url: search_invoice_skus_path(invoice), method: :get, id: "search-skus" do |f| %>
-  <div class="form card border border-secondary p-2 mb-2">
+  <!-- card border border-secondary p-2 mb-2 -->
+  <div class="form">
     <div class="row">
 
       <div class="col-2">
