--- a/app/views/item_fields/_text_area_field.html.erb
+++ b/app/views/item_fields/_text_area_field.html.erb
@@ -1,6 +1,6 @@
 <div class="col-9">
-  <label><%= input_label(f_hsh) %></label>
   <div class="input-group input-group-sm">
-    <%= f.text_area f_hsh[:f_name], value: f_hsh[:selected], placeholder: f_hsh[:f_name], class: "form-control field-param" %>
+    <label class="fs-xs font-weight-light text-secondary pt-2 pl-1"><span class="kind-label"><%= input_label(f_hsh) %></span></label>
+    <%= f.text_area f_hsh[:f_name], value: f_hsh[:selected], class: "form-control border-light-gray field-param" %>
   </div>
 </div>
