--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -17,37 +17,43 @@
 </div>
 <hr>
 
-<div class="row justify-content-center">
-  <div class="col-4">
-
-    <div class="card border border-secondary px-3 py-2 mb-2">
-      <%= render "item_artists/update", item: @item, artist: @item.artist %>
+<h4>Description</h4>
+<div class="row">
+  <div class="col-12">
+    <div class="card p-1 mb-2 border-0">
+      <div><span class="font-weight-bold">Tagline: </span><span id="tagline"><%= @item.hattr('csv_tags', 'tagline') %></span></div>
     </div>
-
-    <div class="card border border-secondary mb-2" id="item-products-aside">
-      <div class="card-header">
-        <%= render "item_products/forms/search", item: @item, inputs: @inputs %>
-        <%= render "item_products/forms/post", item: @item, product: @item.product %>
-        <%= render "item_products/forms/patch", item: @item, product: @item.product %>
-        <%= render "item_products/forms/delete", item: @item, product: @item.product %>
-      </div>
-
-      <div class="card-body" id="tab-pane">
-        <div class="list-group" id="item-products-index" role="tablist">
-          <% @products.each do |product| %>
-            <%= render "item_products/product", item: @item, product: product %>
-          <% end %>
-        </div>
-      </div>
-
-    </div>
-  </div>
-
-
-  <div class="col-8">
-    <div id="show-card">
-      <%= render "items/form", invoice: @item.invoice, item: @item %>
-      <%= render "item_fields/edit", item: @item, rows: @rows %>
+    <div class="card p-1 mb-2 border-0">
+      <div><span class="font-weight-bold">Body: </span><span id="description"><%= @item.hattr('csv_tags', 'description') %></span></div>
     </div>
   </div>
 </div>
+
+<hr>
+<h4>Product Search</h4>
+
+<div class="row">
+  <div class="col-12">
+    <div class="card p-1 mb-2 border-0 bg-light">
+      <%= render "item_products/forms/search", item: @item, inputs: @inputs, products: @products %>
+    </div>
+  </div>
+</div>
+
+<hr>
+<h4>Item</h4>
+
+<div class="row">
+  <div class="col-12">
+    <div class="card p-1 mb-2 border-0 bg-light">
+      <%= render "items/form", invoice: @item.invoice, item: @item %>
+    </div>
+    <%#= render "item_fields/edit", item: @item, rows: @rows %>
+  </div>
+</div>
+
+<!-- <div class="row"> -->
+  <!-- <div class="col-12">  -->
+    <%= render "item_fields/edit", item: @item, rows: @rows %>
+  <!-- </div> -->
+<!-- </div> -->
