refactored product.form_groups/build_form_rows in service of caret toggle forms

--- a/app/views/item_fields/update.js.erb
+++ b/app/views/item_fields/update.js.erb
@@ -1,4 +1,5 @@
 document.getElementById("tagline").textContent="<%= @item.hattr('csv_tags', 'tagline') %>";
 document.getElementById("description").textContent="<%= @item.hattr('csv_tags', 'description') %>";
-$("#edit-item-fields").html("<%= j render 'item_fields/edit', item: @item, rows: @rows %>");
+$("#edit-item-fields").html("<%= j render 'item_fields/edit', item: @item, rows: @rows %>"); //.find(".kind-label").addClass("text-primary");
+//$("#edit-item-fields").find(".kind-label").addClass("text-primary");
 $("#edit-item").html("<%= j render 'items/form', invoice: @item.invoice, item: @item %>");
