--- a/app/views/item_fields/_edit.html.erb
+++ b/app/views/item_fields/_edit.html.erb
@@ -1,26 +1,22 @@
 <%= form_with model: item, url: item_field_path(item), id: "edit-item-fields" do |f| %>
   <div class="form">
-    <%= text_field_tag "item_fields[target_id]", nil, class: "collapse", id: 'caret-id' %>
+    <%= text_field_tag "card_id", nil, class: "collapse", id: 'caret-id' %>
 
     <% rows.each do |card_id, card| %>
       <div class="card p-1 mb-1 border-0 bg-light">
-        <div class="card-header bg-transparent pt-0 pb-1">
-          <!-- pl-0 pr-0 -->
+
+        <div class="card-header bg-transparent pt-0 pb-1 pl-0 pr-0">
           <div class="form-row">
-            <div class="col-auto mr-0 mx-0 pr-0"> 
-              <button id="<%= card_id %>" class="caret-toggle btn btn-sm bg-transparent ml-0 my-1 pl-0 py-0" type="button" <%= disable_btn(card[:body]) %>><%= (fa_icon "caret-right") %></button>
-            </div>
             <% card[:header].each do |f_hsh| %>
-              <%= render "item_fields/form_row", f: f, f_hsh: f_hsh %>
+              <%= render "item_fields/form_row", f: f, f_hsh: f_hsh, card_id: card_id, card: card, i: f_hsh[:i] %>
             <% end %>
           </div>
         </div>
 
-        <div class="card-body py-1 collapse">
-          <div class="form-row">
-            <div class="col-auto px-2"></div>
+        <div class="card-body pt-2 pb-1 pl-0 collapse">
+          <div class="form-row pl-1 ml-0">
             <% card[:body].each do |f_hsh| %>
-              <%= render "item_fields/form_row", f: f, f_hsh: f_hsh %>
+              <%= render "item_fields/form_row", f: f, f_hsh: f_hsh, card_id: card_id, card: card, i: nil %>
             <% end %>
           </div>
         </div>
