--- a/app/views/items/_table_body.html.erb
+++ b/app/views/items/_table_body.html.erb
@@ -1,3 +1,4 @@
 <% invoice.items.order(:sku).each do |item| %>
-  <%= render 'items/table_row', item: item %>
+  <%#= render 'items/table_row', item: item %>
+  <%= render 'items/invoice_card', item: item %>
 <% end %>
