--- a/app/views/item_fields/_select_menu.html.erb
+++ b/app/views/item_fields/_select_menu.html.erb
@@ -4,6 +4,6 @@
       <button id="<%= card_id %>" class="caret-toggle btn btn-sm bg-transparent ml-0 my-1 pl-0 py-0" type="button" <%= disable_btn(card[:body]) %>><%= (fa_icon "caret-right") %></button>
     <% end %>
     <label class="fs-xs font-weight-light text-secondary pt-2 pl-1"><span class="kind-label"><%= input_label(f_hsh) %></span></label>
-    <%= f.collection_select f_hsh[:f_name], f_hsh[:f_val].field_sets, :id, :field_name, {include_blank: true, selected: f_hsh[:selected]}, {class: "form-control border-light-gray rounded-right-border rounded-left-border field-param"} %>
+    <%= f.collection_select f_hsh[:f_name], f_hsh[:f_val].field_sets, :id, :field_name, {include_blank: true, selected: f_hsh[:selected]}, {class: "form-control border-gray-b field-param"} %>
   </div>
 </div>
