--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -5,38 +5,36 @@
     <div class="col-2 border-light-gray p-1">
       <div class="input-group input-group-sm">
         <label class="fs-xs font-weight-light text-secondary"><span class="kind-label">sku:</span></label>
-        <%= f.number_field :sku, placeholder: "sku", class: "form-control border-light-gray rounded-right-border rounded-left-border field-param" %>
+        <%= f.number_field :sku, placeholder: "sku", class: "form-control border-gray-b field-param" %>
       </div>
     </div>
 
     <div class="col-3 border-light-gray p-1">
       <div class="input-group input-group-sm">
         <label class="fs-xs font-weight-light text-secondary pr-1">artist:</label>
-        <%= f.collection_select :artist_id, Artist.all, :id, :artist_name, {include_blank: true, selected: item.artist.try(:id)}, class: "form-control border-light-gray rounded-right-border rounded-left-border field-param" %>
+        <%= f.collection_select :artist_id, Artist.all, :id, :artist_name, {include_blank: true, selected: item.artist.try(:id)}, class: "form-control border-gray-b field-param" %>
       </div>
     </div>
 
     <div class="col-4 border-light-gray p-1">
       <div class="input-group input-group-sm">
         <label class="fs-xs font-weight-light text-secondary pr-1">title:</label>
-        <%= f.text_field :title, placeholder: "title", class: "form-control border-light-gray rounded-right-border rounded-left-border field-param" %>
+        <%= f.text_field :title, placeholder: "title", class: "form-control border-gray-b field-param" %>
       </div>
     </div>
 
     <div class="col-2 border-light-gray p-1">
       <div class="input-group input-group-sm">
         <label class="fs-xs font-weight-light text-secondary pr-1">$</label>
-        <%= f.number_field :retail, placeholder: "retail", class: "form-control border-light-gray rounded-right-border rounded-left-border field-param" %>
+        <%= f.number_field :retail, placeholder: "retail", class: "form-control border-gray-b field-param" %>
       </div>
     </div>
 
     <div class="col-1 border-light-gray p-1">
       <div class="input-group input-group-sm">
         <label class="fs-xs font-weight-light text-secondary pr-1">qty:</label>
-        <%= f.number_field :qty, placeholder: "qty", class: "form-control border-light-gray rounded-right-border rounded-left-border field-param" %>
+        <%= f.number_field :qty, placeholder: "qty", class: "form-control border-gray-b field-param" %>
       </div>
     </div>
   </div>
-  <%#= link_to "delete", [invoice, item], method: :delete, class: 'btn btn-sm btn-outline-danger form-control-sm', data: { confirm: 'Are you sure?' } %>
-
 <% end %>
