refactored all forms (view) on invoice#show and made export_skus controller #create use same methods as skus_controller #create

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,6 +37,10 @@
    background: #FDFEFE !important;
  }
 
+ .bg-gray-d {
+   background: #F8F9F9 !important;
+ }
+
  .bg-disabled {
    background: #e9ecef !important;
  }
