--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -1,14 +1,15 @@
 <h1><%= @invoice.supplier.supplier_name %>: <%= @invoice.invoice_number %></h1>
 
-<a href="<%= new_invoice_search_item_path(@invoice) %>" class="btn btn-link" type="button">
+<!-- <a href="<%#= new_invoice_search_item_path(@invoice) %>" class="btn btn-link" type="button">
   search
-</a>
+</a> -->
 
-<%#= render 'skus/destroy', invoice: @invoice %>
+
 <%= render 'skus/search', invoice: @invoice, results: @results, inputs: @inputs %>
 <%= render 'skus/form', invoice: @invoice %>
+<%= render 'skus/destroy', invoice: @invoice %>
 <%= render 'export_skus/form', invoice: @invoice %>
-<%#= render 'invoices/edit', invoice: @invoice %>
+<%= render 'invoices/edit', invoice: @invoice %>
 <%#= render 'invoices/nav_bar', invoice: @invoice %>
 
 <div id="items-table">
