--- a/app/views/invoices/_edit.html.erb
+++ b/app/views/invoices/_edit.html.erb
@@ -1,16 +1,25 @@
-<div class="card border border-secondary p-2 mb-2">
-  <%= form_with model: invoice, url: supplier_invoice_path(invoice.supplier, invoice) do |f| %>
-  <div class="form" id="edit-invoice">
-    <div class="row">
-      <label class="col-1 col-form-label form-control-sm ml-sm-2">edit invoice:</label>
-      <div class="col-2">
-        <%= f.number_field :invoice_number, placeholder: "invoice #", maxlength: 6, class: "form-control form-control-sm mr-sm-2" %>
+<%= form_with model: invoice, url: supplier_invoice_path(invoice.supplier, invoice), id: "edit-invoice" do |f| %>
+<div class="form">
+  <div class="card bg-gray-d border-0 mb-2">
+    <div class="form-row align-items-center p-1">
+
+      <div class="col-3 ml-0">
+        <div class="input-group input-group-sm">
+          <label class="fs-xs font-weight-light text-secondary pt-2 px-1">inv#</label>
+          <%= f.number_field :invoice_number, placeholder: "invoice #", maxlength: 6, class: "form-control" %>
+        </div>
       </div>
-      <div class="col-2">
-        <%= f.text_field :invoice_name, placeholder: "invoice name", class: "form-control form-control-sm mr-sm-2" %>
+
+      <div class="col-3 ml-0">
+        <div class="input-group input-group-sm">
+          <label class="fs-xs font-weight-light text-secondary pt-2 px-1">name</label>
+          <%= f.text_field :invoice_name, placeholder: "invoice name", class: "form-control" %>
+        </div>
       </div>
-      <button class="btn btn-sm btn-outline-primary form-control-sm" type="submit">edit</button>
+
+      <div class="col-md-1 offset-md-5">
+        <button class="btn btn-sm btn-outline-primary form-control" type="submit">submit</button>
+      </div>
     </div>
   </div>
-  <% end %>
-</div>
+<% end %>
