--- a/app/views/skus/_destroy.html.erb
+++ b/app/views/skus/_destroy.html.erb
@@ -1,11 +1,19 @@
 <%= form_with model: Item.new, url: batch_destroy_invoice_sku_path(invoice), id: "destroy-skus" do |f| %>
-  <div class="form card border border-secondary p-2 mb-2">
-    <div class="row">
-      <label class="col-1 col-form-label form-control-sm ml-sm-2">sku range:</label>
-      <div class="col-8">
-        <%= f.text_field :skus, placeholder: "enter sku range", class: "form-control form-control-sm mr-sm-2" %>
+  <div class="form">
+    <div class="card bg-gray-d border-0 mb-2">
+      <div class="form-row align-items-center p-1">
+
+        <div class="col-3 ml-0">
+          <div class="input-group input-group-sm">
+            <label class="fs-xs font-weight-light text-secondary pt-2 px-1">skus</label>
+            <%= f.text_field :skus, placeholder: "enter sku range", class: "form-control" %>
+          </div>
+        </div>
+
+        <div class="col-md-1 offset-md-8">
+          <button class="btn btn-sm btn-outline-danger form-control" type="submit">destroy</button>
+        </div>
       </div>
-      <button class="btn btn-sm btn-outline-primary form-control-sm" type="submit">destroy</button>
     </div>
   </div>
 <% end %>
