--- a/app/views/skus/_search.erb
+++ b/app/views/skus/_search.erb
@@ -1,23 +1,24 @@
 <%= form_with model: Item.new, url: search_invoice_skus_path(invoice), method: :get, id: "search-skus" do |f| %>
-  <!-- card border border-secondary p-2 mb-2 -->
   <div class="form">
-    <div class="row">
+    <div class="card bg-gray-d border-0 mb-2">
+      <div class="form-row align-items-center p-1">
 
-      <div class="col-2">
-        <label>artist</label>
-        <div class="input-group input-group-sm">
-          <%= f.collection_select :artist, Artist.all, :id, :artist_name, {include_blank: true, selected: inputs['artist']}, class: "form-control search-select artist-select" %>
+        <div class="col-3 ml-0">
+          <div class="input-group input-group-sm">
+            <label class="fs-xs font-weight-light text-secondary pt-2 px-1">artist</label>
+            <%= f.collection_select :artist, Artist.all, :id, :artist_name, {include_blank: true, selected: inputs['artist']}, class: "form-control search-select artist-select" %>
+          </div>
         </div>
-      </div>
 
-      <% inputs['hattrs'].each do |hattr_inputs| %>
-        <%= render 'skus/input_field', scope: 'hattrs', k: hattr_inputs['input_name'], opts: hattr_inputs['opts'], selected: hattr_inputs['selected'] %>
-      <% end %>
+        <% inputs['hattrs'].each do |hattr_inputs| %>
+          <%= render 'skus/input_field', scope: 'hattrs', k: hattr_inputs['input_name'], opts: hattr_inputs['opts'], selected: hattr_inputs['selected'] %>
+        <% end %>
 
-      <div class="col-4">
-        <label>product</label>
-        <div class="input-group input-group-sm">
-          <%= f.collection_select :product, results, :id, :product_name, {include_blank: true, selected: inputs['product']}, class: "form-control product-select" %>
+        <div class="col-5 ml-0">
+          <div class="input-group input-group-sm">
+            <label class="fs-xs font-weight-light text-secondary pt-2 px-1">prd</label>
+            <%= f.collection_select :product, results, :id, :product_name, {include_blank: true, selected: inputs['product']}, class: "form-control product-select" %>
+          </div>
         </div>
       </div>
     </div>
